# rjd

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE-2.0.txt  README.md  flake.nix
benches/: change_filtering.rs
data/: a.json  b.json  file1.json  file2.json
src/: cli.rs  error.rs  ignore.rs  json_path.rs  lib.rs  loader.rs  main.rs  path.rs  types.rs
src/diff/: engine.rs  mod.rs  visitor.rs
src/formatter/: after.rs  changes.rs  json_patch.rs  mod.rs  path_filter.rs  path_parser.rs  util.rs
tests/: cli.rs  diff.rs  formatters.rs
