[package]
name = "rjd"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Error handling
thiserror = "1.0"

# Testing
[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"

[[bin]]
name = "rjd"
path = "src/main.rs"
