[package]
name = "rjd"
version = "1.2.0"
edition = "2021"
description = "Compare two JSON files or inline JSON strings and output the differences"
repository = "https://github.com/darkcodi/rjd"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["json", "diff", "json-patch", "compare", "delta"]
categories = ["command-line-utilities", "development-tools", "encoding"]

[lib]
name = "rjd"
path = "src/lib.rs"

[[bin]]
name = "rjd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
criterion = "0.8.1"
